@@ -1,124 +1,148 @@
 package esprit.pfe.serviceformation.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import esprit.pfe.serviceformation.dto.*;
 import esprit.pfe.serviceformation.entities.Formation;
-import esprit.pfe.serviceformation.entities.TypeFormation;
 import esprit.pfe.serviceformation.services.ExportExcelService;
 import esprit.pfe.serviceformation.services.FormationWorkflowService;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.MediaType;
-import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-
-import java.util.Date;
-import java.util.List;
+import java.util.Collections;
 
 import static org.mockito.ArgumentMatchers.any;
-
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.when;
-import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(FormationWorkflowController.class)
-@DisplayName("FormationWorkflowController - Tests unitaires")
+@ExtendWith(MockitoExtension.class)
 class FormationWorkflowControllerTest {
 
-    @Autowired
     private MockMvc mockMvc;
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
-    @MockitoBean
-    private FormationWorkflowService formationWorkflowService;
-
-    @MockitoBean
-    private ExportExcelService exportExcelService;
-
-    private FormationDTO testDto;
+    @Mock private ExportExcelService exportExcelService;
+    @Mock private FormationWorkflowService formationWorkflowService;
+    @InjectMocks private FormationWorkflowController controller;
 
     @BeforeEach
-    void setUp() {
-        testDto = new FormationDTO();
-        testDto.setIdFormation(1L);
-        testDto.setTitreFormation("Formation Workflow Test");
+    void setup() {
+        mockMvc = MockMvcBuilders.standaloneSetup(controller).build();
     }
 
     @Test
-    @DisplayName("POST /api/v1/formations-workflow - Succès")
-    @WithMockUser(roles = "ADMIN")
-    void shouldCreateWorkflow() throws Exception {
-        FormationWorkflowRequest request = new FormationWorkflowRequest();
-        request.setTitreFormation("Valid Formation Title");
-        request.setTypeBesoin("PROJET");
-        request.setDateDebut(new Date());
-        request.setDateFin(new Date());
-        request.setTypeFormation(TypeFormation.INTERNE);
-        request.setChargeHoraireGlobal(20);
-        request.setObjectifs("Learn something new");
-
+    void testCreateFormation_Success() throws Exception {
         when(formationWorkflowService.createFormationWorkflow(any())).thenReturn(new Formation());
-        when(formationWorkflowService.mapFormationToDTO(any())).thenReturn(testDto);
-
+        when(formationWorkflowService.mapFormationToDTO(any())).thenReturn(new FormationDTO());
         mockMvc.perform(post("/api/v1/formations-workflow")
-                        .with(csrf())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.idFormation").value(1));
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{\"titreFormation\":\"Formation Test\",\"dateDebut\":\"2023-01-01T00:00:00.000+00:00\",\"dateFin\":\"2023-01-02T00:00:00.000+00:00\",\"typeFormation\":\"INTERNE\"}"))
+                .andExpect(status().isCreated());
     }
 
     @Test
-    @DisplayName("GET /api/v1/formations-workflow/{id} - Succès")
-    @WithMockUser(roles = "ADMIN")
-    void shouldGetById() throws Exception {
-        when(formationWorkflowService.getFormationWorkflowById(1L)).thenReturn(testDto);
-
-        mockMvc.perform(get("/api/v1/formations-workflow/1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.idFormation").value(1));
+    void testCreateFormation_BadRequest() throws Exception {
+        mockMvc.perform(post("/api/v1/formations-workflow")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{}")).andExpect(status().isBadRequest());
     }
 
     @Test
-    @DisplayName("GET /api/v1/formations-workflow/{id} - Not Found")
-    @WithMockUser(roles = "ADMIN")
-    void shouldReturn404WhenNotFound() throws Exception {
-        when(formationWorkflowService.getFormationWorkflowById(99L))
-                .thenThrow(new IllegalArgumentException("Formation introuvable"));
-
-        mockMvc.perform(get("/api/v1/formations-workflow/99"))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.error").value("Formation introuvable"));
+    void testUpdateFormation_Success() throws Exception {
+        when(formationWorkflowService.updateFormationWorkflow(anyLong(), any())).thenReturn(new Formation());
+        when(formationWorkflowService.mapFormationToDTO(any())).thenReturn(new FormationDTO());
+        mockMvc.perform(put("/api/v1/formations-workflow/1")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{\"titreFormation\":\"Formation Test\",\"dateDebut\":\"2023-01-01T00:00:00.000+00:00\",\"dateFin\":\"2023-01-02T00:00:00.000+00:00\",\"typeFormation\":\"INTERNE\"}"))
+                .andExpect(status().isOk());
     }
 
     @Test
-    @DisplayName("PUT /api/v1/formations-workflow/presence/{id} - Succès")
-    @WithMockUser(roles = "ADMIN")
-    void shouldUpdatePresence() throws Exception {
+    void testDeleteFormation_Success() throws Exception {
+        mockMvc.perform(delete("/api/v1/formations-workflow/1")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testGetFormationById_Success() throws Exception {
+        when(formationWorkflowService.getFormationWorkflowById(anyLong())).thenReturn(new FormationDTO());
+        mockMvc.perform(get("/api/v1/formations-workflow/1")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testGetFormationById_NotFound() throws Exception {
+        when(formationWorkflowService.getFormationWorkflowById(anyLong())).thenThrow(new IllegalArgumentException("Not found"));
+        mockMvc.perform(get("/api/v1/formations-workflow/1")).andExpect(status().isNotFound());
+    }
+
+    @Test
+    void testGetAllFormations() throws Exception {
+        when(formationWorkflowService.getAllFormationWorkflows()).thenReturn(Collections.emptyList());
+        mockMvc.perform(get("/api/v1/formations-workflow")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testUpdatePresence() throws Exception {
         mockMvc.perform(put("/api/v1/formations-workflow/presence/1")
-                        .with(csrf())
-                        .param("present", "true")
-                        .param("commentaire", "OK"))
-                .andExpect(status().isOk())
-                .andExpect(content().string("Presence mise a jour avec succes !"));
+                .param("present", "true")
+                .param("commentaire", "OK")).andExpect(status().isOk());
     }
 
     @Test
-    @DisplayName("GET /api/v1/formations-workflow/visibles - Succès")
-    @WithMockUser(roles = "ADMIN")
-    void shouldGetVisibles() throws Exception {
-        when(formationWorkflowService.getFormationsVisibles()).thenReturn(List.of(testDto));
+    void testGetFormationsAchevees() throws Exception {
+        when(formationWorkflowService.getFormationsAchevees()).thenReturn(Collections.emptyList());
+        mockMvc.perform(get("/api/v1/formations-workflow/achevees")).andExpect(status().isOk());
+    }
 
-        mockMvc.perform(get("/api/v1/formations-workflow/visibles"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].idFormation").value(1));
+    @Test
+    void testGetAllFormationsWithDocuments() throws Exception {
+        when(formationWorkflowService.getAllFormationsWithDocuments()).thenReturn(Collections.emptyList());
+        mockMvc.perform(get("/api/v1/formations-workflow/with-documents")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testGetCalendarFormations() throws Exception {
+        when(formationWorkflowService.getFormationsForCalendar(anyString())).thenReturn(new FormationsByRoleDTO());
+        mockMvc.perform(get("/api/v1/formations-workflow/enseignants/E1/calendar")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testUpdateInscriptionsOuvertes() throws Exception {
+        when(formationWorkflowService.setInscriptionsOuvertes(anyLong(), anyBoolean())).thenReturn(new FormationDTO());
+        mockMvc.perform(put("/api/v1/formations-workflow/1/inscriptionsOuvertes")
+                .param("ouvert", "true")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testGetFormationsVisibles() throws Exception {
+        when(formationWorkflowService.getFormationsVisibles()).thenReturn(Collections.emptyList());
+        mockMvc.perform(get("/api/v1/formations-workflow/visibles")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testGetFormationsParUp() throws Exception {
+        when(formationWorkflowService.getFormationsParUp(anyString())).thenReturn(Collections.emptyList());
+        mockMvc.perform(get("/api/v1/formations-workflow/par-up").param("upId", "UP1")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testGetFormationsParDepartement() throws Exception {
+        when(formationWorkflowService.getFormationsParDepartement(anyString())).thenReturn(Collections.emptyList());
+        mockMvc.perform(get("/api/v1/formations-workflow/par-departement").param("deptId", "D1")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testExportExcel_Success() throws Exception {
+        when(exportExcelService.exportFormationsAvance(any(), any())).thenReturn(new java.io.ByteArrayOutputStream());
+        mockMvc.perform(get("/api/v1/formations-workflow/export/excel")
+                .param("start", "2023-01-01")
+                .param("end", "2023-12-31")).andExpect(status().isOk());
     }
 }
